--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "homepage": "https://github.com/anandadhikari/rock_paper_scissor",
+  "homepage": "http://anandadhikari.github.io/rock_paper_scissor",
   "name": "rock-paper-scissors",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.9.0",
-    "@iconify/react": "^1.1.0",
-    "bootstrap": "^4.4.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-icons": "^3.7.0",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@iconify/react": "^1.1.3",
+    "bootstrap": "^4.5.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-scripts": "^3.4.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
